# self-docking-robot

./: .gitignore  README.md
aruco_detector/: package.xml  setup.py
aruco_detector/aruco_detector/: aruco_detector_node.py
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: dashboard.js
docs/: wiring.md
motor_controller/: package.xml  setup.py
motor_controller/motor_controller/: motor_controller_node.py
odometry/: package.xml  setup.py
odometry/odometry/: odometry_node.py
robot_bringup/: package.xml  setup.py
robot_bringup/config/: hardware_params.yaml  nav2_params.yaml  slam_params.yaml
robot_bringup/launch/: robot.launch.py
sensor_nodes/: package.xml  setup.py
sensor_nodes/sensor_nodes/: battery_node.py  ir_beacon_node.py  ultrasonic_node.py
simulation/urdf/: robot.urdf.xacro
state_machine/: package.xml  setup.py
state_machine/state_machine/: state_machine_node.py
