<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>Main launch files for the self-docking robot</description>
  <maintainer email="samueludoba19@gmail.com">Samuel Udoba</maintainer>
  <license>MIT</license>
  <depend>robot_state_publisher</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>rosbridge_server</depend>
  <exec_depend>motor_controller</exec_depend>
  <exec_depend>odometry</exec_depend>
  <exec_depend>sensor_nodes</exec_depend>
  <exec_depend>aruco_detector</exec_depend>
  <exec_depend>state_machine</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
