<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_nodes</name>
  <version>1.0.0</version>
  <description>sensor_nodes package</description>
  <maintainer email="udobasamuel5@gmail.com">Samluiz2025</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
